Добавление функционала выбора расположения сервера outline Перенос параметров сервера outline из .env в json файл в core/api_s/outline Исправление ошибок

--- a/core/templates/my_key.html
+++ b/core/templates/my_key.html
@@ -1,5 +1,5 @@
 <b>Ваш ключ:</b>
 <code>{{ user_key }}</code>
    ---------------
-<b>Действует до:</b>
-{{ untill_date }}
+<b>Регион: {{ region_name }}</b>
+<b>Действителен до: {{ untill_date }}</b>
