--- a/core/templates/promo.html
+++ b/core/templates/promo.html
@@ -1,8 +1,8 @@
 <b>Промо-ключ для вас:</b>
 <code>{{ key_user }}</code>
    ---------------
-<b>Действителен до:</b>
-{{ untill_date }}
+<b>Регион: {{ region_name }}</b>
+<b>Действителен до: {{ untill_date }}</b>
    ---------------
 Для использования, Вам необходимо приложение.
 Получите его нажав соответствующую кнопку.
