--- a/core/templates/responce_key.html
+++ b/core/templates/responce_key.html
@@ -1,8 +1,8 @@
-<b>Ключ для вас:</b>
+<b>Ключ для вас на {{ day_count }} {{ word_days }}:</b>
 <code>{{ key_user }}</code>
    ---------------
-<b>Действителен до:</b>
-{{ untill_date }}
+<b>Регион: {{ region_name }}</b>
+<b>Действителен до: {{ untill_date }}</b>
    ---------------
 Для использования, Вам необходимо приложение.
 Получите его нажав соответствующую кнопку.
