Коррекция выводимой информации для визуала

--- a/core/templates/day.html
+++ b/core/templates/day.html
@@ -1,5 +1,5 @@
 За {{ day_count }} {{ word_days }}
 К оплате: {{ amount }}{{ current }}
 ----
-У вас есть 10 минут на оплату
-Только после успешного проведения платежа нажмите кнопку проверки оплаты.
+⏳ У вас есть 10 минут на оплату
+<b>Только после успешного проведения платежа нажмите кнопку проверки оплаты.</b>
