--- a/core/templates/my_key.html
+++ b/core/templates/my_key.html
@@ -1,5 +1,5 @@
-<b>Ваш ключ:</b>
+<b>🔑 Ваш ключ:</b>
 <code>{{ user_key }}</code>
    ---------------
-<b>Регион: {{ region_name }}</b>
-<b>Действителен до: {{ untill_date }}</b>
+<b>🌍 Регион: {{ region_name }}</b>
+<b>⏳ Действителен до: {{ untill_date }}</b>
