--- a/core/templates/start.html
+++ b/core/templates/start.html
@@ -4,4 +4,13 @@
 в техническую поддержку @olvpnsupport
    ---------------
 <b>Выберите нужное меню</b>
+💳 Что бы купить новый ключ,
+нажмите "Купить ключ"
+🔑 Что бы получить действующий ключ,
+нажмите "Мой ключ"
    ---------------
+Если Вы у нас впервые
+Вы можете получить 🎁
+промо-ключ сроком на 1 день.
+Ключ выдается в разделе
+"Купить ключ" - (выбираете регион) - "Промо"
