--- a/core/templates/error_pay.html
+++ b/core/templates/error_pay.html
@@ -1,2 +1,4 @@
-<b>Оплата не прошла.</b>
-Попробуйте еще раз или обратитесь в поддержку - @olvpnsupport.
+<b>🚨 Оплата не прошла.</b>
+ ------------
+Попробуйте еще раз или
+обратитесь в поддержку - @olvpnsupport.
